{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 50,
  "lineage": "8429ddf7-5b32-74b5-b90b-8dbb3ce876fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692010520157:security-group/sg-4ec62749",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-4ec62749",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "692010520157",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0f089d72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692010520157:subnet/subnet-7ad8a11c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-7ad8a11c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692010520157",
            "tags": {
              "Name": "Default subnet for us-east-1a"
            },
            "tags_all": {
              "Name": "Default subnet for us-east-1a"
            },
            "vpc_id": "vpc-0f089d72"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692010520157:vpc/vpc-0f089d72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-5a897626",
            "default_route_table_id": "rtb-606e7d1e",
            "default_security_group_id": "sg-4ec62749",
            "dhcp_options_id": "dopt-40d4e23a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f089d72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-606e7d1e",
            "owner_id": "692010520157",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c429fe566b360025",
            "arn": "arn:aws:ec2:us-east-1:692010520157:instance/i-02baa1f1a978eabb4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02baa1f1a978eabb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "es-unir-keypair-47616",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05de0b7463323dec9",
            "private_dns": "ip-172-31-58-178.ec2.internal",
            "private_ip": "172.31.58.178",
            "public_dns": "ec2-34-207-121-101.compute-1.amazonaws.com",
            "public_ip": "34.207.121.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad0ccfbb2a142d7b",
                "volume_size": 18,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "es-unir-ec2-jenkins-all-traffic-47616"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9d8a06ac",
            "tags": {
              "Name": "es-unir-ec2-production-jenkins-server-47616"
            },
            "tags_all": {
              "Name": "es-unir-ec2-production-jenkins-server-47616"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05001061024356b2d"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_default_vpc.default",
            "aws_security_group.allow_all",
            "data.http.myip",
            "module.key_pair.aws_key_pair.this",
            "random_integer.server",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692010520157:security-group/sg-05001061024356b2d",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05001061024356b2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "3.235.253.149/32",
                  "88.9.235.242/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-4ec62749"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "es-unir-ec2-jenkins-all-traffic-47616",
            "name_prefix": "",
            "owner_id": "692010520157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Country": "es",
              "Environment": "production",
              "Name": "es-unir-ec2-production-jenkins-server-securityGroup",
              "Team": "unir"
            },
            "tags_all": {
              "Country": "es",
              "Environment": "production",
              "Name": "es-unir-ec2-production-jenkins-server-securityGroup",
              "Team": "unir"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f089d72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_security_group.default",
            "aws_default_vpc.default",
            "data.http.myip",
            "random_integer.server"
          ]
        }
      ]
    }
  ]
}